[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Sprites/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Envs/new_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/daisy.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sounds/Music/menu.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Assets/Fonts/EduSABeginner-VariableFont_wght.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Sprites/godot.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/gmtk.jpg" type="Texture" id=8]

[sub_resource type="DynamicFont" id=5]
size = 96
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 250
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 64
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 48
use_filter = true
font_data = ExtResource( 6 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -3840, 0 )
anchor_mode = 0
current = true

[node name="Background" type="Sprite" parent="Camera2D"]
modulate = Color( 0.756863, 0.741176, 0.588235, 0 )
position = Vector2( 960, 540 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Splash" type="Control" parent="."]
margin_left = -1920.0
margin_top = -1080.0
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 2 )

[node name="Godot" type="Label" parent="Splash"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 723.0
margin_top = -814.0
margin_right = 1181.0
margin_bottom = -317.0
custom_fonts/font = SubResource( 5 )
text = "Powered by


Godot Engine"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Splash/Godot"]
position = Vector2( 233, 251.5 )
scale = Vector2( 0.238281, 0.238281 )
texture = ExtResource( 7 )

[node name="GMTK" type="Label" parent="Splash"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1385.0
margin_top = -801.0
margin_right = -537.0
margin_bottom = -304.0
custom_fonts/font = SubResource( 5 )
text = "Made for


"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Splash/GMTK"]
position = Vector2( 420, 285 )
scale = Vector2( 1e-05, 0.35 )
z_index = -1
texture = ExtResource( 8 )

[node name="bruh" type="Label" parent="Splash"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 527.0
margin_top = -801.0
margin_right = 1375.0
margin_bottom = -304.0
custom_fonts/font = SubResource( 5 )
text = "Welcome to the..."
align = 1
valign = 1
__meta__ = {
"_edit_group_": true
}

[node name="Screen1" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 2 )

[node name="Exit" type="Button" parent="Screen1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = 113.0
margin_right = 108.0
margin_bottom = 176.0
focus_mode = 0
text = "Exit"

[node name="Credits" type="Button" parent="Screen1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = 41.0
margin_right = 108.0
margin_bottom = 104.0
focus_mode = 0
text = "Credits"

[node name="Options" type="Button" parent="Screen1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -31.0
margin_right = 108.0
margin_bottom = 32.0
focus_mode = 0
text = "Options"

[node name="Play" type="Button" parent="Screen1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -103.0
margin_right = 108.0
margin_bottom = -40.0
focus_mode = 0
text = "Play"

[node name="Tutorial" type="Button" parent="Screen1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -176.0
margin_right = 108.0
margin_bottom = -113.0
text = "Tutorial"

[node name="Title" type="Label" parent="Screen1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -498.5
margin_right = 498.5
margin_bottom = 336.0
custom_fonts/font = SubResource( 1 )
text = "Dice Court"
align = 1
valign = 1

[node name="Screen2" type="Control" parent="."]
margin_left = 1920.0
margin_right = 3840.0
margin_bottom = 1080.0
theme = ExtResource( 2 )

[node name="OptionsLabel" type="Label" parent="Screen2"]
margin_left = 56.0
margin_right = 678.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 1 )
text = "Options"

[node name="Music" type="HSlider" parent="Screen2"]
margin_left = 264.0
margin_top = 263.0
margin_right = 497.0
margin_bottom = 328.0
rect_scale = Vector2( 1.60701, 1.60701 )
focus_mode = 0

[node name="Label" type="Label" parent="Screen2/Music"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -238.693
margin_top = -30.5
margin_right = -129.693
margin_bottom = 30.5
text = "Music"

[node name="Percentage" type="Label" parent="Screen2/Music"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 134.5
margin_top = -35.4782
margin_right = 276.5
margin_bottom = 25.5218
text = "50%"
valign = 1

[node name="SFX" type="HSlider" parent="Screen2"]
margin_left = 264.0
margin_top = 375.0
margin_right = 497.0
margin_bottom = 440.0
rect_scale = Vector2( 1.60701, 1.60701 )
focus_mode = 0

[node name="Label" type="Label" parent="Screen2/SFX"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -238.693
margin_top = -30.5
margin_right = -129.693
margin_bottom = 30.5
text = "SFX"

[node name="Percentage" type="Label" parent="Screen2/SFX"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 134.5
margin_top = -30.5
margin_right = 276.5
margin_bottom = 30.5
text = "50%"
valign = 1

[node name="Back" type="Button" parent="Screen2"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = -115.0
margin_right = 296.0
margin_bottom = -48.0
focus_mode = 0
text = "Back"

[node name="Screen3" type="Control" parent="."]
margin_top = 1080.0
margin_right = 1920.0
margin_bottom = 3240.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="Screen3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -184.0
margin_top = 80.0
margin_right = 184.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 2 )
text = "Developed by"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Screen3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -437.0
margin_top = -415.0
margin_right = 437.0
margin_bottom = -78.0
custom_fonts/font = SubResource( 3 )
text = "Made especially for
GameMaker ToolKit GameJam 2022

Powered by Godot Engine"
align = 1
valign = 1

[node name="Danel" type="Label" parent="Screen3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -859.0
margin_top = 287.0
margin_right = -107.0
margin_bottom = 389.0
custom_fonts/font = SubResource( 2 )
text = "Danel - Lead Programmer"
valign = 1

[node name="itch" type="Label" parent="Screen3/Danel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -376.0
margin_top = 102.0
margin_right = 376.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 4 )
text = "daniusus.itch.io"

[node name="Awesomeisme2" type="Label" parent="Screen3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 108.0
margin_top = 542.0
margin_right = 882.0
margin_bottom = 644.0
custom_fonts/font = SubResource( 2 )
text = "Awesomeisme2 - 3D Artist"
align = 2
valign = 1

[node name="itch" type="Label" parent="Screen3/Awesomeisme2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -376.0
margin_top = 102.0
margin_right = 376.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 4 )
text = "awesomeisme2.itch.io"
align = 2

[node name="b1n4ry" type="Label" parent="Screen3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -859.0
margin_top = 873.0
margin_right = 118.0
margin_bottom = 975.0
custom_fonts/font = SubResource( 2 )
text = "b1n4ry - Musician & Programmer"
valign = 1

[node name="itch" type="Label" parent="Screen3/b1n4ry"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -488.5
margin_top = 102.0
margin_right = 263.5
margin_bottom = 204.0
custom_fonts/font = SubResource( 4 )
text = "catboybinary.itch.io"

[node name="adrast" type="Label" parent="Screen3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 108.0
margin_top = 1164.0
margin_right = 882.0
margin_bottom = 1266.0
custom_fonts/font = SubResource( 2 )
text = "adrast - Musician"
align = 2
valign = 1

[node name="itch" type="Label" parent="Screen3/adrast"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -376.0
margin_top = 102.0
margin_right = 376.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 4 )
text = "adrastmusic.itch.io
soundcloud.com/adrastea"
align = 2

[node name="sen" type="Label" parent="Screen3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -859.0
margin_top = 1414.0
margin_right = 118.0
margin_bottom = 1516.0
custom_fonts/font = SubResource( 2 )
text = "sen - 2D Artist"
valign = 1

[node name="itch" type="Label" parent="Screen3/sen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -488.5
margin_top = 102.0
margin_right = 263.5
margin_bottom = 204.0
custom_fonts/font = SubResource( 4 )
text = "sentakumono.itch.io"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="Screen1/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Screen1/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Screen1/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Screen1/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Screen1/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="value_changed" from="Screen2/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Screen2/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="Screen2/Back" to="." method="_on_Back_pressed"]
